Implement the complete WinRT incremental build optimization plan (#8)
* Optimize WinRT projection incremental build boundaries

* Fix authoring scanner generated source dependency

* Align projection verification with standalone JVM compile

* Fix IDEA import for runtime compiler plugin classpath

* Keep Kotlin compiler out of Gradle plugin runtime classpath

* Use non-deprecated IR nullability helper

* Isolate included Gradle build outputs

* Reuse included plugin tooling artifacts

* Separate launcher compilation from host staging

* Cache normalized WinRT metadata models

* Track metadata model cache state

* Preserve unchanged compiler support outputs

* Declare deterministic binary verification reports

* Remove stale XAML compiler support output

* Prepare local WinRT imports during configuration

* Publish unchanged authoring candidates without rewriting

* Isolate JVM projection compile classpaths

* Exclude generated entry roots from authoring scans

* Stabilize incremental verification and generated outputs

* Add direct JVM serialization dependencies to compiler plugin classpath

* Share compatible WinRT runtime and authoring producers

* Fix Native runtime lowering plugin classpath ownership

* Isolate Native WinRT projections in published reusable KLIBs

* Fix application launcher main class and generator heap

* Clean stale JVM projection classes before recompiling

* Verify packed Native projection KLIBs

* Wire standalone projections into JVM tests